Fixing layout issue in IE7.

--- a/src-modules/org/opencms/ade/containerpage/client/ui/css/containerpage.css
+++ b/src-modules/org/opencms/ade/containerpage/client/ui/css/containerpage.css
@@ -20,6 +20,8 @@
 
 ul.clipboardList{
 	overflow: auto;
+	/* position relative is required to hide overflowing content caused by layout bug in IE7 */
+	position: relative;
 	height: 441px;
 	border: 1px solid value("constants.css.borderColor");
 	padding: 0 2px;
